responsiveness on smaller devices + some bug fixed

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -559,3 +559,68 @@ body{
 .thumb-up-icon:hover{
     filter: drop-shadow(0 0 0.25rem #00b341);
 }
+
+@media (max-width: 1535px){
+    .graph-second-row{
+        flex-direction: column;
+        margin-top: 35px;
+    }
+    #chartDonut{
+        width: 1000px;
+    }
+}
+
+@media (max-width: 1200px){
+    .graph-first-row{
+        flex-wrap: wrap;
+    }
+    .graph-first-row .graph-holder:nth-child(1),
+    .graph-first-row .graph-holder:nth-child(2){
+        flex: 1 0 33%;
+    }
+    .graph-first-row .graph-holder:last-child{
+        flex-basis: 100%; 
+        display: flex;
+        flex: 1 0 33%;
+        margin-bottom: 25px;
+    }
+    .graph-second-row .graph-holder:last-child{
+        width: 75%;
+    }
+    #expenses-table {
+        width: 800px;
+    }
+}
+@media (max-width: 992px){
+    #navbar {
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+    }
+}
+
+
+@media (max-width: 825px){
+    #expenses-table {
+        width: 700px;
+    }
+    .switch-tab {
+        font-size: 10px;
+    }
+    .expenses-goals {
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 725px){
+    #expenses-table {
+        width: 600px;
+    }
+    .switch-tab {
+        font-size: 10px;
+    }
+    .expenses-goals {
+        font-size: 13px;
+    }
+}
+
+
